--- a/7_toc.tex
+++ b/7_toc.tex
@@ -1,1 +1,6 @@
-temporarily unavailable
+\setcounter{tocdepth}{2} % can change 2 for deeper levels
+\tableofcontents
+\newpage
+\listoftables
+\newpage
+\listoffigures
