--- a/9_chap_1.tex
+++ b/9_chap_1.tex
@@ -1,5 +1,4 @@
-
-\section{heading 1: test ttest testtest testest test}
+\section{heading 1: my chapter 1}
 
 Lorem ipsum dolor sit amet, consectetuer adipiscing elit.  Ut purus elit, vestibulum ut, placeratac,  adipiscing vitae,  felis.   Curabitur dictum gravida mauris.  
 
@@ -7,10 +6,30 @@ Nam arcu libero,  nonummy eget,consectetuer id, vulputate a, magna. Donec vehicu
 
 I want to cite something here \parencite{zuo2019standing}. I want to want to try cite~\textcite{zuo2019standing} with in-line style.
 
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit.  Ut purus elit, vestibulum ut, placeratac,  adipiscing vitae,  felis.   Curabitur dictum gravida mauris.  
+Nam arcu libero,  nonummy eget,consectetuer id, vulputate a, magna. Donec vehicula augue eu neque. Pellentesque habitant morbitristique senectus et netus et malesuada fames ac turpis egestas. Mauris ut leo. Cras viverra metusrhoncus sem.  Nulla et lectus vestibulum urna fringilla ultrices. 
+
+
 \subsection{heading 2: use for your broadest subheading level, centered, bold, uppercase and lowercase}
 
 Lorem ipsum dolor sit amet, consectetuer adipiscing elit.  Ut purus elit, vestibulum ut, placeratac,  adipiscing vitae,  felis.   Curabitur dictum gravida mauris. 
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit.  Ut purus elit, vestibulum ut, placeratac,  adipiscing vitae,  felis.   Curabitur dictum gravida mauris.  
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit.  Ut purus elit, vestibulum ut, placeratac,  adipiscing vitae,  felis.   Curabitur dictum gravida mauris.  
+Nam arcu libero,  nonummy eget,consectetuer id, vulputate a, magna. Donec vehicula augue eu neque. Pellentesque habitant morbitristique senectus et netus et malesuada fames ac turpis egestas. Mauris ut leo. Cras viverra metusrhoncus sem.  Nulla et lectus vestibulum urna fringilla ultrices. 
+
+Nam arcu libero,  nonummy eget,consectetuer id, vulputate a, magna. Donec vehicula augue eu neque. Pellentesque habitant morbitristique senectus et netus et malesuada fames ac turpis egestas. Mauris ut leo. Cras viverra metusrhoncus sem.  Nulla et lectus vestibulum urna fringilla ultrices. 
+
 
 \subsubsection{heading 3: use for your next heading level, left-aligned, bold, uppercase and lowercase}
 
 Lorem ipsum dolor sit amet, consectetuer adipiscing elit. 
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit.  Ut purus elit, vestibulum ut, placeratac,  adipiscing vitae,  felis.   Curabitur dictum gravida mauris.  
+Nam arcu libero,  nonummy eget,consectetuer id, vulputate a, magna. Donec vehicula augue eu neque. Pellentesque habitant morbitristique senectus et netus et malesuada fames ac turpis egestas. Mauris ut leo. Cras viverra metusrhoncus sem.  Nulla et lectus vestibulum urna fringilla ultrices. 
+
+Let me add a figure here~\cref{fig:1}:
+
+\begin{center}
+    \bxfigure[!hb]{Some figure\label{fig:1}}{
+  \includegraphics[width=0.9\columnwidth]{fig1}
+}
+\end{center}
