--- a/9_chap_a.tex
+++ b/9_chap_a.tex
@@ -7,3 +7,29 @@
 \section{APPENDIX \hbAppendixPrefix: Test for appendix}
 
 Lorem ipsum dolor sit amet, consectetuer adipiscing elit.  Ut purus elit, vestibulum ut, placeratac,  adipiscing vitae,  felis.   Curabitur dictum gravida mauris.  
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit.  Ut purus elit, vestibulum ut, placeratac,  adipiscing vitae,  felis.   Curabitur dictum gravida mauris.  
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit.  Ut purus elit, vestibulum ut, placeratac,  adipiscing vitae,  felis.   Curabitur dictum gravida mauris.  
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit.  Ut purus elit, vestibulum ut, placeratac,  adipiscing vitae,  felis.   Curabitur dictum gravida mauris.  
+I am going cite a paper~\parencite{zuo2018more}!
+
+
+
+Make a table in Appendix A:
+\bxtable[!hb]{%
+My A table\label{taba:haha}}{%
+\begin{tabular}{|c|c|c|c|c|c|c|c|c|c|}
+\hline
+{column}&{column}&{column}&{column}&{column}&{column}&{column}&{column}&{column}&{column}\\
+\hline
+12.34   &12.34  &12.34  &12.34  &12.34  &12.34  &12.34  &12.34  &12.34  &12.34  \\
+\hline
+12.34   &12.34  &12.34  &12.34  &12.34  &12.34  &12.34  &12.34  &12.34  &12.34  \\
+\hline
+\end{tabular}}
+
+And I am going to ref this table~\cref{taba:haha}.
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit.  Ut purus elit, vestibulum ut, placeratac,  adipiscing vitae,  felis.   Curabitur dictum gravida mauris.  
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit.  Ut purus elit, vestibulum ut, placeratac,  adipiscing vitae,  felis.   Curabitur dictum gravida mauris.  
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit.  Ut purus elit, vestibulum ut, placeratac,  adipiscing vitae,  felis.   Curabitur dictum gravida mauris.  
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit.  Ut purus elit, vestibulum ut, placeratac,  adipiscing vitae,  felis.   Curabitur dictum gravida mauris.  
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit.  Ut purus elit, vestibulum ut, placeratac,  adipiscing vitae,  felis.   Curabitur dictum gravida mauris.  
