--- a/9_chap_b.tex
+++ b/9_chap_b.tex
@@ -6,4 +6,11 @@
 
 \section{APPENDIX \hbAppendixPrefix: Test for another appendix}
 
-Lorem ipsum dolor sit amet, consectetuer adipiscing elit.  Ut purus elit, vestibulum ut, placeratac,  adipiscing vitae,  felis.   Curabitur dictum gravida mauris.  
+Lorem ipsum dolor sit amet, consectetuer adipiscing elit.  Ut purus elit, vestibulum ut, placeratac,  adipiscing vitae,  felis.   Curabitur dictum gravida mauris.
+Let me add a figure here~\cref{fig:chap_1}:
+
+\begin{center}
+    \bxfigure[!hb]{Some figure\label{fig:chap_1}}{
+    \includegraphics[width=0.9\columnwidth]{fig1}
+}
+\end{center}
