--- a/ref.bib
+++ b/ref.bib
@@ -8,3 +8,35 @@
   year={2019},
   publisher={Elsevier}
 }
+
+@article{fennell2018predicting,
+  title={Predicting and Explaining Behavioral Data with Structured Feature Space Decomposition},
+  author={Fennell, Peter G and Zuo, Zhiya and Lerman, Kristina},
+  journal={arXiv preprint arXiv:1810.09841},
+  year={2018}
+}
+
+@article{zuo2017state,
+  title={The state and evolution of US iSchools: From talent acquisitions to research outcome},
+  author={Zuo, Zhiya and Zhao, Kang and Eichmann, David},
+  journal={Journal of the Association for Information Science and Technology},
+  volume={68},
+  number={5},
+  pages={1266--1277},
+  year={2017},
+  publisher={Wiley Online Library}
+}
+
+@article{zuo2018more,
+  author={Zuo, Zhiya and Zhao, Kang},
+  doi={10.1016/J.JOI.2018.06.006},
+  issn={1751-1577},
+  journal={Journal of Informetrics},
+  number={3},
+  pages={736--756},
+  publisher={Elsevier},
+  title={{The more multidisciplinary the better? – The prevalence and interdisciplinarity of research collaborations in multidisciplinary institutions}},
+  volume={12},
+  year={2018}
+}
+
